# Food101_MLOps-Lvl_1

./: .gitignore  README.md  pyproject.toml
inference_api/: config.yaml  main.py
inference_api/inference/: loader.py  predictor.py
inference_api/utils/: helpers.py  postprocessing.py
notebooks/: Food-101_CNN-prototype.ipynb  Manually_pick_best_model.ipynb  Subset_Food-101_generator.ipynb
notebooks/.ipynb_checkpoints/: Food-101_CNN-prototype-checkpoint.ipynb
platform/docker/: Dockerfile.base  Dockerfile.dev  Dockerfile.mlflow  Dockerfile.serve  Dockerfile.train
platform/infrastructure/: docker-compose.yml
scripts/: entrypoint.sh
src/: cli.py  config.yaml
src/data/: dataloader.py
src/evaluation/: __init__.py  crossval_score.py  plots.py
src/models/: __init__.py  food101.py  food101_0.py
src/serving/: evaluate_and_export_best.py  export_to_onnx.py  onnx_registry.py
src/training/: __init__.py  engine.py  train.py
src/utils/: helpers.py  onnx_registry.py  paths.py
tests/: conftest.py
tests/unit/: README.md  test_config_validation.py  test_data_dataloader.py  test_evaluation_crossval_score.py  test_evaluation_plots.py  test_inference_postprocessing.py  test_inference_predictor.py  test_models_food101.py  test_models_food101_0.py  test_training_engine.py  test_utils_helpers.py  test_utils_paths.py
