[project]
name = "food101"
version = "0.1.0"
description = "Tutorial ML pipeline for simple computer vision task"
authors = [
    {name = "Kamil Solski",email = "kamil.solski@onet.pl"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "torchinfo (>=1.8.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "mlflow (>=3.1.1,<4.0.0)",
    "onnx (>=1.18.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
